--- a/src/GoogleCalendar.css
+++ b/src/GoogleCalendar.css
@@ -8,10 +8,10 @@ a {
 }
 
 .calendar-container {
-  width: 80%;  /* Set the width of the container */
+  /*width: 80%;  !* Set the width of the container *!*/
   margin: 0 auto; /* Center the container horizontally */
   border: 1px solid #ccc; /* Optional: Add a border around the container */
-  padding: 10px; /* Optional: Add some padding inside the container */
+  /*padding: 10px; !* Optional: Add some padding inside the container *!*/
 }
 
 .fc .fc-toolbar {
