--- a/src/styles/GoogleCalendar.css
+++ b/src/styles/GoogleCalendar.css
@@ -11,7 +11,7 @@ a {
   /*width: 80%;  !* Set the width of the container *!*/
   margin: 0 auto; /* Center the container horizontally */
   border: 1px solid #ccc; /* Optional: Add a border around the container */
-  /*padding: 10px; !* Optional: Add some padding inside the container *!*/
+  padding: 10px; /* Optional: Add some padding inside the container */
 }
 
 .fc .fc-toolbar {
