--- a/src/styles/GoogleCalendar.css
+++ b/src/styles/GoogleCalendar.css
@@ -7,6 +7,7 @@
   width: 100%;
   margin: 0 auto;
   font-family: Arial, sans-serif;
+  color: black;
 }
 
 .fc .fc-toolbar {
@@ -64,7 +65,7 @@
 
 /* Remove blue color and text decoration */
 .fc a {
-  color: inherit !important;
+  color: black !important;
   text-decoration: none !important;
 }
 
