--- a/src/styles/GoogleCalendar.css
+++ b/src/styles/GoogleCalendar.css
@@ -69,6 +69,11 @@
   text-decoration: none !important;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
 @media (max-width: 768px) {
   .fc .fc-toolbar {
     flex-direction: column;
