--- a/src/styles/GoogleCalendar.css
+++ b/src/styles/GoogleCalendar.css
@@ -7,31 +7,14 @@ a {
   text-decoration: none;
 }
 
-/*.calendar-container {*/
-/*  width: 850px;  !* Set the width of the container *!*/
-/*  height: 720px; !* Set the height of the container *!*/
-/*  margin: 0 auto; !* Center the container horizontally *!*/
-/*  border: 1px solid #ccc; !* Optional: Add a border around the container *!*/
-/*  padding: 10px; !* Optional: Add some padding inside the container *!*/
-/*}*/
-
 .fc .fc-toolbar {
   font-size: 0.9em;
 }
 
-/*.fc .fc-daygrid-event {*/
-/*  font-size: 0.8em; !* Adjust the font size as needed *!*/
-/*  padding: 2px;     !* Adjust the padding as needed *!*/
-/*  margin: 1px 0;    !* Adjust the margin as needed *!*/
-/*  line-height: 1.2;*/
-/*}*/
+.fc .fc-toolbar-title { font-size: 1.4em; }
+.fc .fc-button { background-color: #16A34A; border-color: #16A34A; }
+.fc .fc-button:hover { background-color: #45a049; border-color: #45a049; }
 
-/*!* Make each cell a perfect square *!*/
-/*.fc-daygrid-day {*/
-/*  position: relative;*/
-/*}*/
-
-/*.fc-daygrid-day-frame {*/
-/*  height: 0;*/
-/*  !*padding-bottom: 100%; !* This makes the height equal to the width *!*!*/
-/*}*/
+.fc .fc-button:focus { box-shadow: 0 0 0 0.2rem rgba(76, 175, 80, 0.5); }
+.fc-theme-standard .fc-list-day-cushion { background-color: #f0f0f0; }
+.fc .fc-list-event:hover td { background-color: #f5f5f5; }
