--- a/src/styles/GoogleCalendar.css
+++ b/src/styles/GoogleCalendar.css
@@ -20,7 +20,6 @@ a {
 .fc .fc-list-event:hover td { background-color: #f5f5f5; }
 
 .fc .fc-button.fc-button-active {
-  background-color: #3e8e41 !important;  /* Change background color when active */
-  border-color: #3e8e41 !important;      /* Change border color when active */
-  color: white !important;               /* Change text color when active */
+  background-color: #166534 !important;  /* Change background color when active */
+  border-color: #AAD5BC !important;      /* Change border color when active */
 }
