--- a/src/styles/AdaptiveCalendar.module.css
+++ b/src/styles/AdaptiveCalendar.module.css
@@ -11,23 +11,32 @@ a {
   font-size: 0.9em;
 }
 
-.fc .fc-toolbar-title { font-size: 1.3em; }
-.fc .fc-button { background-color: #16A34A; border-color: #16A34A; }
-.fc .fc-button:hover { background-color: #45a049; border-color: #45a049; }
 
-.fc .fc-button:focus { box-shadow: 0 0 0 0.2rem rgba(132, 241, 148, 0.5); }
-.fc-theme-standard .fc-list-day-cushion { background-color: #f0f0f0; }
-.fc .fc-list-event:hover td { background-color: #f5f5f5; }
-
-.fc .fc-button.fc-button-active {
-  background-color: #166534 !important;  /* Change background color when active */
-  border-color: #AAD5BC !important;      /* Change border color when active */
+/* Global styles for FullCalendar buttons */
+:global(.fc .fc-button) {
+  background-color: #16A34A !important;
+  border-color: #16A34A !important;
 }
 
+:global(.fc .fc-button:hover) {
+  background-color: #45a049 !important;
+  border-color: #45a049 !important;
+}
+
+:global(.fc .fc-button:focus) {
+  box-shadow: 0 0 0 0.2rem rgba(132, 241, 148, 0.5) !important;
+}
+
+:global(.fc .fc-button.fc-button-active) {
+  background-color: #166534 !important;
+  border-color: #AAD5BC !important;
+}
+
+/* Existing styles */
 .calendar-container.mobile {
-  padding-bottom: 60px; /* Adjust this value as needed */
+  padding-bottom: 60px;
 }
 
-.calendar-container.mobile .fc-header-toolbar {
-  margin-bottom: 1.5em !important;
+.popoverStyle {
+  z-index: 99999 !important;
 }
