--- a/src/styles/AdaptiveCalendar.module.css
+++ b/src/styles/AdaptiveCalendar.module.css
@@ -11,7 +11,6 @@ a {
   font-size: 0.9em;
 }
 
-
 /* Global styles for FullCalendar buttons */
 :global(.fc .fc-button) {
   background-color: #16A34A !important;
@@ -32,11 +31,6 @@ a {
   border-color: #AAD5BC !important;
 }
 
-/* Existing styles */
-.calendar-container.mobile {
-  padding-bottom: 60px;
-}
-
-.popoverStyle {
-  z-index: 99999 !important;
+:global( .fc .fc-toolbar-title) {
+  font-size: 17px;
 }
